--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,41 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+    --azul: #3b82f6;
+    --blanco: #ffffff;
+    --gris-claro: #f5f5f5;
+    --gris: #94a3b8;
+    --gris-oscuro: #64748b;
+    --negro: #000;
+}
+
+
 body {
     font-family: "Lato", sans-serif;
 }
 html {
     box-sizing: border-box;
+}
+
+/*** SWIPE LIST OVERRIDES **/
+.swipe-action__leading {
+    background-color: var(--azul);
+    color: var(--blanco);
+    margin-bottom: 1rem;
+}
+
+.swipe-action__trailing {
+    background-color: #db2777;
+    margin-bottom: 1rem;
+    color: var(--blanco);
+}
+
+.swipeable-list .swipe-action {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: right;
+    font-weight: bold;
 }
 
